# web-agent

./: CMakeLists.txt
config/: agent.conf
src/: agent.cpp  agent.cpp,backup2  agent.cpp.backup
tests/: test_config.cpp  test_http.cpp  test_logger.cpp  test_main.cpp  test_parser.cpp  test_real_webagent.cpp  test_task.cpp  test_tasks_lifecycle.cpp
tests/tests/: test_tasks_lifecycle.cpp
